Avoid layout shift by using padding instead of margin
Occurs when replacing results with a new query's

--- a/packages/mdbook-infisearch/src/infisearch.css
+++ b/packages/mdbook-infisearch/src/infisearch.css
@@ -225,7 +225,7 @@
 }
 
 .infi-header {
-    margin-bottom: 9px;
+    padding-bottom: 9px;
 }
 
 .infi-load-more {
